# Face-Mask-Detection

./: README.md  mask_detection.ipynb  mask_detection.py  pyproject.toml  requirements.txt
