[tool.poetry]
name = "tutorial"
version = "0.1.0"
description = ""
authors = ["shahd1995913 <shahdalkhatib95@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow = "^2.8.0"
matplotlib = "^3.5.1"
keras = "^2.8.0"
seaborn = "^0.11.2"
numpy = "^1.22.3"
sklearn = "^0.0"
opencv-python-headless = "^4.5.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
